# ContraControl

./: .gitignore  .gitpod.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  Doxyfile-linux  LICENSE  README.md  _controller_2system_2timer_8h.html  _controller_2system_2timer_8h__dep__incl.dot  _controller_2system_2timer_8h__dep__incl.map  _controller_2system_2timer_8h__dep__incl.md5  _controller_2system_2timer_8h__incl.map  _controller_2system_2timer_8h_source.html  _interfaces_2_interfaces_2network__interface_8h.html  _interfaces_2_interfaces_2network__interface_8h_source.html  _interfaces_2_interfaces_2types_2channel_8h.html  _interfaces_2_interfaces_2types_2channel_8h__dep__incl.map  _interfaces_2_interfaces_2types_2channel_8h__dep__incl.md5  _interfaces_2_interfaces_2types_2channel_8h_source.html  _interfaces_2types_2device__label_8h.html  _interfaces_2types_2device__label_8h_source.html  _interfaces_2types_2model__command_8h.html  _interfaces_2types_2model__command_8h__dep__incl.dot  _interfaces_2types_2model__command_8h__dep__incl.map  _interfaces_2types_2model__command_8h__dep__incl.md5  _interfaces_2types_2model__command_8h__incl.dot  _interfaces_2types_2model__command_8h__incl.map  _interfaces_2types_2model__command_8h__incl.md5  _interfaces_2types_2model__command_8h_source.html  _model_2devices_2channel_8h.html  _model_2devices_2channel_8h__dep__incl.map  _model_2devices_2channel_8h__dep__incl.md5  _model_2devices_2channel_8h__incl.map  _model_2devices_2channel_8h__incl.md5  _model_2devices_2channel_8h_source.html  _model_2system_2timer_8h.html  _model_2system_2timer_8h__dep__incl.dot  _model_2system_2timer_8h__dep__incl.map  _model_2system_2timer_8h__dep__incl.md5  (+1663 more)
dev/: CMakeLists.txt  cpp.hint
dev/Controller/: CMakeLists.txt  commands.h  controller_main.cpp  controller_main.h  types.h
dev/Controller/Commands/: command.h
dev/Controller/commander/: commander.h
dev/Controller/commands/: command.h
dev/Controller/system/: timer.h
dev/Interfaces/: CMakeLists.txt  controller_interface.cpp  controller_interface.h  model_interface.cpp  model_interface.h
dev/Interfaces/Interfaces/: common_objects.h  controller_interface.cpp  controller_interface.h  main_interface.h  model_interface.cpp  model_interface.h  network_interface.h  view_interface.h
dev/Interfaces/Messaging/: consumers.h  internal_messages.h  message_relay.h  system_messaging.h
dev/Interfaces/Network/: connections.h  messages.h
dev/Interfaces/Threading/: subsystem_job.h  thread_pool.h  threading.h
dev/Interfaces/types/: device_label.h  model_command.h  timed_command.h
dev/Mains/: CMakeLists.txt  client_headless.cpp
dev/Model/: CMakeLists.txt  actions.h  device.h  model_main.cpp  model_main.h  states.h  types.h
dev/Model/devices/: audio.h  channel.h  device.h  gradient.h  switch.h
dev/Model/interfaces/: device_actions.h  model_actions.h
dev/Model/node/: node.h
dev/Model/src/: device.cpp  node.cpp
dev/Model/state/: channel.h  rgb.h  state.h  time.h
dev/Model/system/: timer.h
dev/Network/: CMakeLists.txt  messages.h  network_main.cpp  network_main.h
dev/Network/messages/: messaging.h  node_communication.h
dev/Network/src/: basic_types.cpp  connections.cpp  ipv4_addr.cpp  linux_network_interface.cpp  messaging.cpp  network_interface.cpp  network_status_state.cpp  network_type.cpp  node_messages.cpp  send_message.cpp  windows_network_interface.cpp
dev/Network/system_interfaces/: linux_network_interface.h  network_interface.h  windows_network_interface.h
dev/Utilities/: CMakeLists.txt  exceptions.h  save_reader.h  timer.h  utils.h
dev/Utilities/Alerts/: consumers.h  system_alerts.h
dev/Utilities/Logging/: log_item.cpp  log_item.h  logging.cpp  logging.h
dev/Utilities/Pointers/: shared_pointer.h
dev/Utilities/Utilities/: exceptions.h  save_reader.h  subsystems.h  system.h  timer.h  utils.h
dev/Utilities/src/: consumers.cpp  system_alerts.cpp
dev/View/: CMakeLists.txt  system.h  view_main.cpp  view_main.h
dev/View/Desktop/: desktop_main.cpp  desktop_main.h  views.h
dev/View/Windows/: CMakeLists.txt  callbacks.h  main.cpp  views.h  window.cpp  window.h
dev/View/common/: view.h
dev/View/factories/: view_factory.h
dev/View/format/: console.h  file.h  format.h  ui.h
dev/View/input_interface/: keyboard_buffer_input.h
dev/View/view/: view.h  views.h
dev/View_Windows/: View_Windows.vcxproj  main.cpp
unit_test/: CMakeLists.txt  CodeCoverage.cmake
unit_test/test_utilities/: device_utilities.cpp  device_utilities.h  keyboard_interface_utilities.cpp  keyboard_interface_utilities.h  keyboard_utility_object.cpp  linux_keyboard_utilities.cpp  module_mains.h  network_utiliies.h  network_utilities.cpp  node_utilities.cpp  node_utilities.h  pch.h  system_testings.cpp  system_testings.h  system_utilities.cpp  system_utilities.h  test_utilities.cpp  test_utilities.h  win_keyboard_utilities.cpp
unit_test/tests/: Action_Layer.cpp  Action_Stack.cpp  Command_View_Message.cpp  Commands.cpp  Controller.cpp  Device.cpp  Errors.cpp  Exceptions.cpp  Gradient_Device.cpp  Input_System.cpp  Internal_Messages.cpp  Internal_Messages_Ptr.cpp  Keyboard.cpp  Keyboard_Buffer_Input.cpp  Keyboard_Hardware.cpp  Keyboard_System_Not_Connected.cpp  Network.cpp  Network_Messages.cpp  Node.cpp  Scheduler.cpp  Subsystem.cpp  Switch_Device.cpp  Task.cpp  Threading.cpp  Utilities.cpp
unit_test/tests/Devices/: Commands.cpp  Gradient.cpp  Invalid.cpp  Node.cpp  RGB.cpp  Switch.cpp
unit_test/tests/Errors/: Errors.cpp  Exceptions.cpp
unit_test/tests/Input/: Keyboard_Buffer_Input.cpp  Keyboard_Hardware.cpp  Keyboard_Interface.cpp  Keyboard_System_Not_Connected.cpp
unit_test/tests/Internal_Messaging/: Command_View_Message.cpp  Logging_Messages.cpp  Message_Ptr.cpp  Message_Relay.cpp
unit_test/tests/Keyboard/: Action_Layer.cpp  Action_Stack.cpp  Keyboard_Buffer_Input.cpp  Keyboard_Hardware.cpp  Keyboard_System_Not_Connected.cpp
unit_test/tests/Messaging/: Internal_Messages.cpp  (+1 more)
unit_test/utilities/: device_utilities.cpp  device_utilities.h  test_utilities.cpp  test_utilities.h
(+654 files in other folders)
